initial load search results add to cart commit

--- a/src/containers/books/book/book.css
+++ b/src/containers/books/book/book.css
@@ -1,7 +1,7 @@
 .divClass {
   height: fit-content;
   width: 50%;
-  margin: 20px;
+  margin-top: 20px;
   padding: 20px;
   display: flex;
   flex-direction: column;
